# ppm_view

./: CMakeLists.txt  README.md
example/: ppm_gen.py  test.ppm
src/: log.h  main.cpp  ppm.cpp  ppm.h  window.cpp  window.h
